testdata/baselines/reference/submodule/compiler/pushTypeGetTypeOfAlias.errors.txt
bar.js(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
bar.js(1,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
bar.js(2,24): error TS2339: Property 'someProp' does not exist on type 'typeof import("bar")'.


==== bar.js (3 errors) ====
    module.exports = function () {};
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    exports.blah = exports.someProp;
                           ~~~~~~~~
!!! error TS2339: Property 'someProp' does not exist on type 'typeof import("bar")'.